--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>13 OCT 2000</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://divyaraj-t.github.io/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1(757)-777-1394</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>State:</strong> <span>Virginia, USA</span></li>
                 </ul>
