--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <h2>About</h2>
           <p>Welcome to my portfolio! I am currently pursuing a Masters's degree in Data Science and Analytics, with a Bachelor's degree in Computer Engineering. I have always had a passion for technology and data, but I also nurture a deep love for cultural activities such as dance and theater, as well as sports, with soccer being a particular favorite of mine.
 
-            <br><br>With over 2 years of experience in the field of Data Science and Analytics, I bring a wealth of knowledge and expertise to my work. However, I am not just limited to the technical aspects of my work. I am also very much interested in management, as demonstrated by my successful election as the Cultural Secretary of my college among 4000+ students, where I organized more than 30 events, both academic and cultural, with a team of more than 100 stuends under my supervision.
+            <br><br>With over 2 years of experience in the field of Data Science and Analytics, I bring a wealth of knowledge and expertise to my work. However, I am not just limited to the technical aspects of my work. I am also very much interested in management, as demonstrated by my successful election as the Cultural Secretary of my college among 4000+ students, where I organized more than 30 events, both academic and cultural, with a team of more than 100 students under my supervision.
             
             <br><br>I am proud to have been a part of various clubs, such as the Google Developers Club, where I served as a Student Data Science Lead, the IEEE, where I held the position of Marketing and Research Head, and the TEDx College Club, where I organized events and speeches from experts around the state on various topics.
             
