--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
             <br><br>With over 2 years of experience in the field of Data Science and Analytics, I bring a wealth of knowledge and expertise to my work. However, I am not just limited to the technical aspects of my work. I am also very much interested in management, as demonstrated by my successful election as the Cultural Secretary of my college among 4000+ students, where I organized more than 30 events, both academic and cultural, with a team of more than 100 students under my supervision.
             
-            <br><br>I am proud to have been a part of various clubs, such as the Google Developers Club, where I served as a Student Data Science Lead, the IEEE, where I held the position of Marketing and Research Head, and the TEDx College Club, where I organized events and speeches from experts around the state on various topics.
+            <br><br>I am proud to have been a part of various clubs, such as the Google Developers Club, where I served as a Student Data Science Lead and Google Cloud Facilitator, IEEE Club, where I held the position of Marketing and Research Head, and the TEDx College Club, where I organized events and speeches from experts around the state on various topics.
             
             <br><br>Overall, I consider myself a true Data Enthusiast with a touch of fun and marketing abilities that spark within me. This portfolio is a reflection of my dedication to my craft, as well as my multifaceted personality, showcasing my technical expertise and leadership abilities among many others.</p>
         </div>
