--- a/index.html
+++ b/index.html
@@ -287,6 +287,29 @@
               <p><em>S.C.E.T, Surat, India</em></p>
               <p>Relevant Coursework: Algorithms, Operating Systems, Database Management, Data Structures, Machine Learning, Data Mining.</p>
             </div>
+            
+            <h3 class="resume-title">Certifications</h3>
+            <div class="resume-item">
+              <h4>Introduction to data science in python</h4>
+              <h5>University of Michigan (coursera)</h5>
+            </div>
+            <div class="resume-item">
+              <h4>Google Cloud Campus Facilitator</h4>
+              <h5>Google</h5>
+            </div>
+            <div class="resume-item">
+              <h4>AI-FOR-INDIA [Face Recognition application using python]</h4>
+              <h5>GUVI</h5>
+            </div>
+            <div class="resume-item">
+              <h4>IT Security: Defense against the digital dark arts</h4>
+              <h5>Google</h5>
+            </div>
+          </div>
+          <div class="resume-item">
+            <h4>Network and Database Security</h4>
+            <h5>Udemy</h5>
+          </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
