--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title"><a href="">U.S. Employment Ststistics Prediction</a></h4>
+            <h4 class="title"><a href="">U.S. Employment Statistics Prediction</a></h4>
             <p class="description">Used python and machine learning to determine how employment has changed over the years in United states and make projections on number of jobs in future</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
