--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  I am happy to say that he has always delivered on time with perfection whenever asked and is adept in generating results that are asked for. The dashboards that he made for us very pretty informative and contained all the insights that we needed in order to understand booking patterns. 
+                  I am happy to say that he has always delivered on time with perfection whenever asked and is adept in generating results that are asked for. The dashboards that he made for us were pretty informative and contained all the insights that we needed in order to understand booking patterns. 
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
