--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img1.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-img2.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Divyaraj Thakaria</a></h1>
       </div>
 
@@ -498,27 +498,27 @@
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title"><a href="">U.S. Employment Statistics Prediction</a></h4>
+            <h4 class="title"><a>U.S. Employment Statistics Prediction</a></h4>
             <p class="description">Used python and machine learning to determine how employment has changed over the years in United states and make projections on number of jobs in future</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">Forest Fire Detection System</a></h4>
+            <h4 class="title"><a>Forest Fire Detection System</a></h4>
             <p class="description">Developed machine learning prediction model to detect susceptible forest fire conditions using XGboost and delpoyment using flask</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bi bi-binoculars"></i></div>
-            <h4 class="title"><a href="">Buisness Insights for Hilton</a></h4>
+            <h4 class="title"><a>Buisness Insights for Hilton</a></h4>
             <p class="description">Created performance Dashboards for hilton double tree showcasing booking and buisness insights  with calculations and comaprisions from previous years.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
-            <h4 class="title"><a href="">Mask Detection</a></h4>
+            <h4 class="title"><a>Mask Detection</a></h4>
             <p class="description">Using Python Machine learning and computer vision to detect if the person on camera/in image is wearing a face mask or not.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-            <h4 class="title"><a href="">Customer churn prediction</a></h4>
+            <h4 class="title"><a>Customer churn prediction</a></h4>
             <p class="description">Built a classification model from a given customer dataset for customer churn</p>
           </div>
         </div>
