--- a/index.html
+++ b/index.html
@@ -79,13 +79,11 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Welcome to my portfolio! I am currently pursuing a Masters's degree in Data Science and Analytics, with a Bachelor's degree in Computer Engineering.
-
-            <br><br>With over 3 years of experience in the field of Data Science and Analytics, I bring a wealth of knowledge and expertise to my work. However, I am not just limited to the technical aspects of my work. I am also very much interested in management, as demonstrated by my successful election as the Cultural Secretary of my college among 4000+ students, where I organized more than 30 events, both academic and cultural, with a team of more than 100 students under my supervision.
-            
-            <br><br> I have always had a passion for technology and data, but I also nurture a deep love for cultural activities such as dance and theater, as well as sports, with soccer being a particular favorite of mine. I am proud to have been a part of various clubs, such as the Google Developers Club, where I served as a Student Data Science Lead and Google Cloud Facilitator, IEEE Club, where I held the position of Marketing and Research Head, and the TEDx College Club, where I organized events and speeches from experts around the state on various topics.
-            
-            <br><br>Overall, I consider myself a true Data Enthusiast with a touch of fun and marketing abilities that spark within me. This portfolio is a reflection of my dedication to my craft, as well as my multifaceted personality, showcasing my technical expertise and leadership abilities among many others.</p>
+          <p>
+            Welcome to my dynamic portfolio! I am an ambitious individual currently pursuing a Master's degree in Data Science and Analytics, backed by a solid foundation in Computer Engineering from my Bachelor's degree. With over 3 years of hands-on experience in the realm of Data Science and Analytics, I bring a wealth of knowledge and expertise to the table.
+            <br><br>Beyond the technical realm, I am deeply passionate about effective management, as evidenced by my successful tenure as the Cultural Secretary of my college. In this role, I orchestrated over 30 events, spanning both academic and cultural domains, managing a dedicated team of more than 100 students. This experience not only honed my organizational skills but also showcased my ability to lead and inspire a large group toward a common goal.
+            <br><br> My love for technology and data is complemented by a rich tapestry of interests, including dance, theater, and sports – with soccer holding a special place in my heart. My involvement in various clubs, such as the Google Developers Club, where I served as a Student Data Science Lead and Google Cloud Facilitator, speaks to my commitment to staying at the forefront of technological advancements. Additionally, my roles in the IEEE Club as Marketing and Research Head, and contributions to the TEDx College Club underscore my diverse skill set and broad interests.
+            <br><br>In essence, I consider myself a true Data Enthusiast with a flair for fun and marketing. This portfolio serves as a testament to my dedication to the craft of Data Science, showcasing not only my technical prowess but also my leadership abilities and multifaceted personality. I am excited about the opportunities ahead and eager to contribute my unique blend of skills to the ever-evolving field of Data Science..</p>
         </div>
 
         <div class="row">
