--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Experienced data scientist, skilled in collecting, cleaning, and analyzing large volumes of data to identify patterns, trends, and insights that drive strategic decision-making. Proficient in various data analysis tools and programming languages, searching for new opportunities to apply practical knowledge in the field of Data Science and Analytics..</p>
+          <p>Experienced data scientist, skilled in collecting, cleaning, and analyzing large volumes of data to identify patterns, trends, and insights that drive strategic decision-making. Proficient in various data analysis tools and programming languages, searching for new opportunities to apply practical knowledge in the field of Data Science and Analytics.</p>
         </div>
 
         <div class="row">
