--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
               <ul>
                 <li>Libraries, Technologies and frameworks used: SAS, Qualtrics, Tableau, Python, MS Access</li>
                 <li>Using Python and SAS scripts to clean and pre-process student/faculty/staff data for data driven decision-making and analytics</li>
-                <li>Implementing stored procedures, triggers, and functions at database level on MS Access for backend data storage and ETL.</li>
+                <li>Implementing stored procedures, triggers, and functions at database level on MS Access for backend data storage and ETL processes.</li>
                 <li>Creating and publishing multiple data dashboards and reports for student and faculty awareness & analysis using Tableau server</li>
               </ul>
             </div>
