--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
           </div>
           <div class="section-title">
             <br>
-            <h3 align="center"></h3align><a href="https://drive.google.com/file/d/1ez_YqHxfqb5qdW15fNi7TOfC5E5eHS5P/view?usp=sharing"> Link to downloadable resume pdf. </a></h3>
+            <h3 align="center"></h3align><a href="https://drive.google.com/file/d/1YqxWWE8oKeDB05VHJobp8_vJlQBZSGDo/view?usp=drive_link"> Link to downloadable resume pdf. </a></h3>
         </div>
       </div>
     </section><!-- End Resume Section -->
