--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
           </div>
           <div class="section-title">
             <br>
-            <h3 align="center"></h3align><a href="https://drive.google.com/file/d/1YqxWWE8oKeDB05VHJobp8_vJlQBZSGDo/view?usp=drive_link"> Link to downloadable resume pdf. </a></h3>
+            <h3 align="center"></h3align><a href="https://drive.google.com/file/d/1c4JUrk4OpoFL3Cpq9UfGC7skv9rYk-zx/view?usp=sharing"> Link to downloadable resume pdf. </a></h3>
         </div>
       </div>
     </section><!-- End Resume Section -->
