--- a/index.html
+++ b/index.html
@@ -333,6 +333,7 @@
                 <li>Using Python and SAS scripts to clean and pre-process student/faculty/staff data for data driven decision-making and analytics</li>
                 <li>Implementing stored procedures, triggers, and functions at database level on MS Access for backend data storage and ETL processes.</li>
                 <li>Creating and publishing multiple data dashboards and reports for student and faculty awareness & analysis using Tableau server</li>
+                <li>Developed Random Forest regression model with SMOTE algorithm to predict first-year student retention with around 200,000 data rows and 88% accuracy for university strategic development</li>
               </ul>
             </div>
             <div class="resume-item">
