--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Divyaraj Thakaria</h1>
-      <p>I'm a <span class="typed" data-typed-items="Data Analyst, Data Engineer, Data Scientist, Back-End Developer, Big Data Enthusiast"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Data Scientist, Data Analyst, Data Engineer, Back-End Developer, Big Data Enthusiast, Blockchain Enthusiast"></span></p>
     </div>
   </section><!-- End Hero -->
 
