--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             Welcome to my dynamic portfolio! I am an ambitious individual currently pursuing a Master's degree in Data Science and Analytics, backed by a solid foundation in Computer Engineering from my Bachelor's degree. With over 3 years of hands-on experience in the realm of Data Science and Analytics, I bring a wealth of knowledge and expertise to the table.
             <br><br>Beyond the technical realm, I am deeply passionate about effective management, as evidenced by my successful tenure as the Cultural Secretary of my college. In this role, I orchestrated over 30 events, spanning both academic and cultural domains, managing a dedicated team of more than 100 students. This experience not only honed my organizational skills but also showcased my ability to lead and inspire a large group toward a common goal.
             <br><br> My love for technology and data is complemented by a rich tapestry of interests, including dance, theater, and sports – with soccer holding a special place in my heart. My involvement in various clubs, such as the Google Developers Club, where I served as a Student Data Science Lead and Google Cloud Facilitator, speaks to my commitment to staying at the forefront of technological advancements. Additionally, my roles in the IEEE Club as Marketing and Research Head, and contributions to the TEDx College Club underscore my diverse skill set and broad interests.
-            <br><br>In essence, I consider myself a true Data Enthusiast with a flair for fun and marketing. This portfolio serves as a testament to my dedication to the craft of Data Science, showcasing not only my technical prowess but also my leadership abilities and multifaceted personality. I am excited about the opportunities ahead and eager to contribute my unique blend of skills to the ever-evolving field of Data Science..</p>
+            <br><br>In essence, I consider myself a true Data Enthusiast with a flair for fun and marketing. This portfolio serves as a testament to my dedication to the craft of Data Science, showcasing not only my technical prowess but also my leadership abilities and multifaceted personality. I am excited about the opportunities ahead and eager to contribute my unique blend of skills to the ever-evolving field of Data Science.</p>
         </div>
 
         <div class="row">
@@ -331,7 +331,7 @@
                 <li>Using Python and SAS scripts to clean and pre-process student/faculty/staff data for data driven decision-making and analytics</li>
                 <li>Implementing stored procedures, triggers, and functions at database level on MS Access for backend data storage and ETL processes.</li>
                 <li>Creating and publishing multiple data dashboards and reports for student and faculty awareness & analysis using Tableau server</li>
-                <li>Developed Random Forest regression model with SMOTE algorithm to predict first-year student retention with around 200,000 data rows and 88% accuracy for university strategic development</li>
+                <li>Developed Random Forest regression model with SMOTE algorithm to predict first-year student retention with around real-time student data  realted to gradesand 88% accuracy for university strategic development</li>
               </ul>
             </div>
             <div class="resume-item">
